{{$NEXT}}

1.302027  2016-06-15 09:42:32-07:00 America/Los_Angeles (TRIAL RELEASE)

    - use pre_filter instead of filter for TODO in Test::Builder (Fix $683)
    - Fix typos in transitions doc (#681)

1.302026  2016-06-07 07:53:30-07:00 America/Los_Angeles

    - No Changes from 1.302025-TRIAL

1.302025  2016-06-06 22:38:12-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Make sure enabling culling/shm sets pid and tid (Fix #679)

1.302024  2016-06-02 20:27:35-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Add Generic event type

1.302023  2016-06-02 08:09:54-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Do not fail if Test2::API::Breakage cannot load (rare 5.10.0 issue)
    - Potential fix for t/Legacy/Regression/637.t
    - Make t/Legacy/Regression/637.t AUTHOR_TESTING for now

1.302022  2016-05-28 17:53:11-07:00 America/Los_Angeles

    - Improve thread checks to better detect broken 5.10 builds
    - Use thread checks to skip/run t/Legacy/Regression/637.t

1.302021  2016-05-20 21:47:17-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Files.t should warn, not die, if it cannot remove its temp dir.
    - VMS fixes for Files.t and IPC system

1.302020  2016-05-18 11:54:15-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Many micro-opts from Graham Knop (haarg)
    - Spelling fixes and tests from Karen Etheridge (ether)
    - Fix leaky File.t file so that tmp doesn't fill up
    - Move some modules out of the known broken list in xt tests
    - Add Test2 based tools to downstream testing
    - Change when PID/TID are stashed (for forkprove)

1.302019  2016-05-18 08:16:39-07:00 America/Los_Angeles

    - POD Spelling fixes

1.302018  2016-05-14 09:08:05-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Handle Test::Builder::Exception properly
    - Silence noisy STDERR in test suite

1.302017  2016-05-13 08:09:58-07:00 America/Los_Angeles (TRIAL RELEASE)

    - Fix util.t win32 bug

1.302016  2016-05-12 19:43:38-07:00 America/Los_Angeles (TRIAL RELEASE)
