@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add 'inherit_trace' param to run_subtest
+
 1.302027  2016-06-15 09:42:32-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - use pre_filter instead of filter for TODO in Test::Builder (Fix $683)
